added button code, pin change interrupt; changed to 328p dip

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,7 @@
 [env:1mhzbodisabled]
 platform = atmelavr
 framework = arduino
-board = 328p1MHzBODdisabled
+board = 328p1MHzBODdisabled-dip
 
 upload_protocol = usbasp
 upload_flags = -Pusb
@@ -9,5 +9,6 @@ upload_flags = -Pusb
 lib_deps = 
         https://github.com/LowPowerLab/RFM69.git
 	252 
+	1106
 	
 
