--- a/platformio.ini
+++ b/platformio.ini
@@ -3,6 +3,7 @@ platform = atmelavr
 framework = arduino
 board = 328p1MHzBODdisabled-dip
 
+upload_port = bar
 upload_protocol = usbasp
 upload_flags = -Pusb
 
